--- a/index.html
+++ b/index.html
@@ -2,49 +2,26 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Earthquakes</title>
-
-  <!-- Google Font -->
-  <link href="https://fonts.googleapis.com/css?family=Sanchez" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Leaflet Step-2</title>
 
   <!-- Leaflet CSS -->
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.3/dist/leaflet.css"
-  integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
-  crossorigin=""/>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.0-rc.3/dist/leaflet.css" />
 
-<!-- Leaflet-Choropleth JavaScript -->
-<script type="text/javascript" src="js/choropleth.js"></script>
-
-
-  <!-- Our CSS -->
-  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <!-- CSS -->
+  <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
-
 <body>
 
-  <!-- The div that holds our map -->
-  <div id="map-id"></div>
 
-  <!-- D3 -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.5.0/d3.min.js"></script>
-
-  <!-- MomentJS -->
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.15.1/moment.min.js"></script>
+  <div id="mapid"></div>
 
   <!-- Leaflet JavaScript -->
-  <script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js"
-  integrity="sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q=="
-  crossorigin=""></script>
-
-  <!-- polyfill.io is library for using newer JavaScript features in older browers (such as Object.assign) -->
-  <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
-
-  <!-- API Key -->
-  <script type="text/javascript" src="js/config.js"></script>
-
-  <!-- Our JavaScript -->
-  <script type="text/javascript" src="js/logic.js"></script>
-
+  <script src="https://unpkg.com/leaflet@1.0.0-rc.3/dist/leaflet.js"></script>
+  <!-- D3 JavaScript -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.2.3/d3.min.js"></script>
+  <!-- JavaScript -->
+  <script type="text/javascript" src="logic.js"></script>
 </body>
-
 </html>
